--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-My name is Andre Lesa and I am sitting at a table in the bedroom
+Hello there, my name is Andre Lesa.
+
+Perhaps, you there in town.
